fix: margin top on mobile version

--- a/src/general.css
+++ b/src/general.css
@@ -50,4 +50,7 @@ summary {
     padding-left: 12px;
     padding-right: 12px;
   }
+  h6 {
+    margin-top: 10%;
+  }
 }
