--- a/src/testimonials.css
+++ b/src/testimonials.css
@@ -1,5 +1,5 @@
 .testimonials .pink-label {
-  margin-top: 12%;
+  margin-top: 8%;
   margin-bottom: 0;
   text-align: center;
 }
@@ -61,6 +61,9 @@
 }
 /* -----------media----------------- */
 @media only screen and (max-width: 1025px) {
+  .testimonials .pink-label {
+    margin-top: 12%;
+  }
   .testimonials-display {
     width: 80%;
     margin: 0 5%;
@@ -73,9 +76,15 @@
     font-size: 90%;
   }
 }
-@media only screen and (max-width: 426px) {
+@media only screen and (max-width: 769px) {
   .testimonials .pink-label {
     margin-top: 5%;
+  }
+}
+
+@media only screen and (max-width: 426px) {
+  .testimonials .pink-label {
+    margin-top: -10%;
   }
   .testimonials .label {
     font-size: 120%;
